syntax = "proto3";

option go_package = "github.com/longln/Order-Management-System-Microservices/common/api";

package api;

message Order {
    string ID = 1;
    string CustomerID = 2;
    string Status = 3;
    repeated Item Items = 4;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order);
    rpc GetOrder(GetOrderRequest) returns (Order);
}

message GetOrderRequest {
    string orderID = 1;
    string customerID = 2;
}

message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string priceID = 4;
}


message ItemsWithQuantity {
    string itemID = 1;
    int32 quantity = 2;
}

message CreateOrderRequest {
    string customerID = 1;
    repeated ItemsWithQuantity Items = 2;
}

message CreateOrderResponse {
    string orderID = 1;
}